tests/negative/gold/block2_test.gold
tests/negative/block2_test.toit:5:5: error: Unexpected block
    : debug it
    ^~~~~~~~~~
tests/negative/block2_test.toit:5:5: error: List elements may not be blocks
    : debug it
    ^~~~~~~~~~
Compilation failed.
